Opened 15 years ago

Closed 15 years ago

#68 closed defect (fixed)

mpeg-ts sample fails immediately after successful probing

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git Keywords: mpegts
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Attached is the beginning of a dvb-recording: It is correctly auto-detected as mpeg-ts (score 98), but ffmpeg quits immediately after the detection. The sample is read fine if I cut away the first 148 bytes.
Plays fine with vlc, the problem is also reproducible with MPlayer.

ffmpeg -v 9 -loglevel 99 -i recording.ts
FFmpeg version git-N-29185-g25347c8, Copyright (c) 2000-2011 the FFmpeg developers
  built on Apr 19 2011 10:49:09 with gcc 4.5.2
  configuration: --cc=/usr/local/gcc-4.5.2/bin/gcc --enable-gpl --enable-libvorbis
  libavutil    50. 40. 1 / 50. 40. 1
  libavcodec   52.120. 0 / 52.120. 0
  libavformat  52.108. 0 / 52.108. 0
  libavdevice  52.  4. 0 / 52.  4. 0
  libavfilter   1. 79. 0 /  1. 79. 0
  libswscale    0. 13. 0 /  0. 13. 0
[NULL @ 0x128e660] mpegts: Probed with size=32768 and score=98
recording.ts: Operation not permitted

Attachments (1)

recording.ts (1.0 MB ) - added by Carl Eugen Hoyos 15 years ago.

Download all attachments as: .zip

Change History (2)

by Carl Eugen Hoyos, 15 years ago

Attachment: recording.ts added

comment:1 by reimar, 15 years ago

Resolution: fixed
Status: newclosed

Fix finally pushed. It's still possible to construct files that fail, ideally the code should be changed to find the TS packet size as long as necessary, but that might be overkill.

Note: See TracTickets for help on using tickets.