Assume some TS packet size instead of failing completely.

Fixes ticket #68.